# ollama

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
custom_theme/: ads.txt  main.html
custom_theme/assets/js/: custom.js
docs/: mkdocs.yml
docs/docs/en/: examples.md  index.md  modelfile.md  quickstart.md  tutorials.md
docs/docs/zh/: README_ZH.md  api.md  development.md  docker.md  faq.md  import.md  index.md  modelfile.md  openai.md  quickstart.md  template.md  tutorials.md  windows.md
docs/docs/zh/translate_scripts/: translate.py
docs/en/: gpu_source.md  import.md  index.md
docs/zh/: examples.md  faq.md  gpu.md  gpu_source.md  index.md  linux.md  modelfile.md  troubleshooting.md  tutorials.md
