[project]
name = "ollama-docs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "llamafactory.cn", email = "support@llamafactory.cn"},
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.46",
    "mkdocs-static-i18n>=1.2.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
